# internal/api/data/data.go
@@ -1,0 +1,57 @@
+package data
+
+import (
+	"net/http"
+
+	"github.com/go-chi/chi/v5"
+)
+
+type service struct {
+	handler http.Handler
+}
+
+func NewService() http.Handler {
+	r := chi.NewRouter()
+	s := service{
+		handler: r,
+	}
+
+	r.Get("/", s.getManyData())
+	r.Get("/{uuid}", s.getData())
+	r.Get("/types", s.getDataTypes())
+	r.Get("/aggregated", s.getAggregatedData())
+
+	return s
+}
+
+func (s service) ServeHTTP(w http.ResponseWriter, r *http.Request) {
+	s.handler.ServeHTTP(w, r)
+}
+
+func (s service) getAggregatedData() http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		w.WriteHeader(http.StatusNotImplemented)
+		w.Write([]byte("501 not implemented"))
+	}
+}
+
+func (s service) getManyData() http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		w.WriteHeader(http.StatusNotImplemented)
+		w.Write([]byte("501 not implemented"))
+	}
+}
+
+func (s service) getData() http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		w.WriteHeader(http.StatusNotImplemented)
+		w.Write([]byte("501 not implemented"))
+	}
+}
+
+func (s service) getDataTypes() http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		w.WriteHeader(http.StatusNotImplemented)
+		w.Write([]byte("501 not implemented"))
+	}
+}
